@@ -3,10 +3,14 @@ package com.kylin.kylinojcodesandbox;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.FoundWord;
+import cn.hutool.dfa.WordTree;
 import com.kylin.kylinojcodesandbox.model.ExecuteCodeRequest;
 import com.kylin.kylinojcodesandbox.model.ExecuteCodeResponse;
 import com.kylin.kylinojcodesandbox.model.ExecuteMessage;
 import com.kylin.kylinojcodesandbox.model.JudgeInfo;
+import com.kylin.kylinojcodesandbox.security.DefaultSecurityManager;
+import com.kylin.kylinojcodesandbox.security.DenySecurityManager;
 import com.kylin.kylinojcodesandbox.utils.ProcessUtils;
 
 import java.nio.charset.StandardCharsets;
@@ -19,6 +23,21 @@ import java.util.UUID;
 public class JavaNativeCodeSandbox implements CodeSandbox {
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
     private static final String GLOBAL_CODE_FILE_NAME = "Main.java";
+    private static final long TIME_OUT = 5000L;
+    private static final String SECURITY_MANAGER_PATH = "D:\\code\\oj\\kylinoj-code-sandbox\\src\\main\\resources\\security";
+
+    private static final String SECURITY_MANAGER_CLASS_NAME ="MySecurityManager";
+    // 黑名单
+    public static final List<String> blackList = Arrays.asList("Files", "exec");
+    //使用字典树代替列表存储单词，用更少的空间存储更多的敏感词汇，并且实现更高效的敏感词查找。
+    private static final WordTree WORD_TREE;
+
+    static {
+        // 静态对象初始化 初始化字典树 没必要每次启动都加
+        WORD_TREE = new WordTree();
+        WORD_TREE.addWords(blackList);
+    }
+
 
     public static void main(String[] args) {
         JavaNativeCodeSandbox javaNativeCodeSandbox = new JavaNativeCodeSandbox();
@@ -41,12 +60,20 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
 
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
+        //System.setSecurityManager(new DenySecurityManager());
         /**
          * 执行 `process.waitFor` 等待程序执行完成，
          * 并通过返回的 `exitValue`判断程序是否正常返回，
          * 然后从 Process 的输入流 `inputStream`和错误流 `errorStream`获取控制台输出。
          */
         String code = executeCodeRequest.getCode();
+//        // 校验代码是否包含有黑名单中命令
+//        FoundWord foundWord = WORD_TREE.matchWord(code);
+//        if (foundWord != null) {
+//            System.out.println("此文件包含敏感词：" + foundWord.getFoundWord());
+//            return null;
+//        }
+
         // ================1、保存用户代码为文件===================
         // 获取用户工作文件路径
         String userDir = System.getProperty("user.dir");
@@ -74,12 +101,26 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         }
         //===============3、执行代码，得到输出结果===================
         List<ExecuteMessage> executeMessageList = new ArrayList<>();//输出信息列表
-        String runCmdPattern = "java -Dfile.encoding=UTF-8 -cp %s Main %s";
+        // 此处mac下是使用 : 分割不同类，windows下是使用 ; 分割不同类名
+        //***********在运行 java 程序时，指定安全管理器 class 文件的路径、安全管理器的名称。****************
+        //指定安全管理器时制定了类名，MySecurityManager，所以resource/security/MySecurityManager不用改成Main就能编译
+        String runCmdPattern = "java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s";
+//        String runCmdPattern = "java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s";
         List<String> inputList = executeCodeRequest.getInputList();
         for (String inputArgs : inputList) {
-            String runCmd = String.format(runCmdPattern, userCodeParentPath, inputArgs);
+            String runCmd = String.format(runCmdPattern, userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME,inputArgs);
             try {
-                Process runProcess = Runtime.getRuntime().exec(runCmd);
+                Process runProcess = Runtime.getRuntime().exec(runCmd);//Runtime.getRuntime()开启了一个新的子进程
+                //超时控制：创建一个守护线程，超时后自动终止Process线程
+                new Thread(() -> {
+                    try {
+                        Thread.sleep(TIME_OUT);
+                        System.out.println("程序运行超时，已经中断");
+                        runProcess.destroy();
+                    } catch (Exception e) {
+                        throw new RuntimeException(e);
+                    }
+                }).start();
                 ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
                 //ExecuteMessage executeMessage = ProcessUtils.runInteractProcessAndGetMessage(runProcess,inputArgs);
                 System.out.println(executeMessage);
@@ -131,8 +172,10 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         return executeCodeResponse;
     }
 //=================6、错误处理，提升程序健壮性===================
+
     /**
      * 获取错误响应
+     *
      * @param e
      * @return
      */
